change "clear the table" icon

--- a/views/greet.erb
+++ b/views/greet.erb
@@ -45,8 +45,9 @@
     </ol>
     <% if @players.count > 0 %>
         <div class="row">
-          <a href="/new/game" type="button" class="span3 btn btn-danger">Clear the table
-            <i class='icon-chevron-right icon-white'></i></a>
+          <a href="/new/game" type="button" class="span3 btn btn-danger">
+            <i class='icon-remove icon-white'></i> Clear the table
+          </a>
         </div>
     <% end %>
 <% end %>
