--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,8 @@
     <title>Blackjack on the web</title>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/application.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="/application.js"></script>
   </head>
   <body style="padding-top: 75px;">
 
