--- a/views/_actions.erb
+++ b/views/_actions.erb
@@ -12,7 +12,7 @@
     <% if @player.finished %>
         <ul class="nav nav-list">
           <li class="nav-header">DEALER ACTIONS</li>
-          <li><a href="/actions/hit/dealer"><i class="icon-thumbs-up"></i> Hit dealer's hand</a></li>
+          <li><a href="/actions/hit/dealer" id="hit_dealer"><i class="icon-thumbs-up"></i> Hit dealer's hand</a></li>
           <li class="divider"></li>
           <li><%= erb :'_dealer_status' %></li>
           <li>&nbsp;</li>
@@ -21,8 +21,8 @@
     <% else %>
         <ul class="nav nav-list">
           <li class="nav-header">USER ACTIONS</li>
-          <li><a href="/actions/hit/player"><i class="icon-thumbs-up"></i> Hit</a></li>
-          <li><a href="/actions/stay/player"><i class="icon-thumbs-down"></i> Stay</a></li>
+          <li><a href="/actions/hit/player" id="hit_player"><i class="icon-thumbs-up"></i> Hit</a></li>
+          <li><a href="/actions/stay/player" id="stay_player"><i class="icon-thumbs-down"></i> Stay</a></li>
           <li class="divider"></li>
           <li><%= erb :'_dealer_status' %></li>
           <li>&nbsp;</li>
