--- a/views/game.erb
+++ b/views/game.erb
@@ -1,20 +1,23 @@
 <% PLAYER_CARD_WIDTH_DURING_PLAY = 2 %>
 <% PLAYER_CARD_WIDTH_AFTER_PLAY = 1 %>
-<% CARD_WELL_SPAN_WIDTH = 8 # MUST BE ODD!!! %>
+<% CARD_WELL_SPAN_WIDTH = 8 # MUST BE ODD!!!  %>
 
-<div class="span12">
-  <div class="row">
-    <div class="span3 affix">
-      <p><%= erb :'_actions' %></p>
-      <p><%= erb :'_player_stats' %></p>
+<div id="game">
+  <div class="span12">
+    <div class="row">
+      <div class="span3 affix">
+        <p><%= erb :'_actions' %></p>
+
+        <p><%= erb :'_player_stats' %></p>
+      </div>
+      <%= erb :'_game_result' %>
+      <%= erb :'_dealer_cards' %>
     </div>
-    <%= erb :'_game_result' %>
-    <%= erb :'_dealer_cards' %>
   </div>
-</div>
 
-<div class="span12">
-  <div class="row">
-    <%= erb :'_player_cards' %>
+  <div class="span12">
+    <div class="row">
+      <%= erb :'_player_cards' %>
+    </div>
   </div>
 </div>
