--- a/views/bet.erb
+++ b/views/bet.erb
@@ -12,7 +12,7 @@
     </p>
     <p>&nbsp;</p>
     <p>
-      <a href="/reset_game" class="btn span4 btn-danger clearfix" style="margin-left: 0px !important;">
+      <a href="/reset_game" class="btn span4 btn-danger clearfix reset-game" style="margin-left: 0px !important;">
         Click here to reset the current game
       </a>
     </p>
