--- a/views/_dealer_cards.erb
+++ b/views/_dealer_cards.erb
@@ -1,25 +1,12 @@
-<div id="dealer-cards" class="well span<%= "#{CARD_WELL_SPAN_WIDTH}" %> pull-right">
-  <h5>Dealer's Cards</h5>
-  <hr />
-    <% if @game.all_players_finished? && !@game.dealer_turn_over? %>
-        <div class="row">
-          <% @dealer.cards.each_with_index do |card, index| %>
-              <% if index % (CARD_WELL_SPAN_WIDTH / 2) == 0 %>
-                  <% if index > 0 %>
-                      <%= '</div><div class="row">' %>
-                  <% end %>
-              <% end %>
-              <div class="span2"><img src="<%= "#{card.image}" %>" class="playing-card"/></div>
-          <% end %>
-        </div>
-    <% else %>
-        <div class="row">
-          <div class="span<%= "#{PLAYER_CARD_WIDTH_AFTER_PLAY}" %>">
-            <img src="<%= "#{@dealer.first_card.image}" %>" class="playing-card"/>
-          </div>
-          <div class="span<%= "#{PLAYER_CARD_WIDTH_AFTER_PLAY}" %>">
-            <img src="/images/cards/cover.jpg" class="playing-card"/>
-          </div>
-        </div>
+<div id="dealer-cards" class="cards">
+  <%= erb :'_dealer_score' %>
+
+  <% if @game.all_players_finished? %>
+    <% @dealer.cards.each do |card| %>
+      <img src="<%= "#{card.image}" %>" alt=""/>
     <% end %>
+  <% else %>
+    <img src="<%= "#{@dealer.first_card.image}" %>"/>
+    <img src="/images/cards/cover.jpg"/>
+  <% end %>
 </div>
