--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,13 @@
 <html>
   <head>
     <title>Blackjack on the web</title>
+    <link rel="stylesheet" href="/application.css"/>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/application.css">
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="/application.js"></script>
+
   </head>
   <body style="padding-top: 75px;">
 
