--- a/views/layout_without_navbar.erb
+++ b/views/layout_without_navbar.erb
@@ -10,22 +10,7 @@
     <script src="/application.js"></script>
     <script src="/bootbox.min.js"></script>
   </head>
-  <body style="padding-top: 75px;">
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <ul class="nav">
-            <li><a href="/">Start a new game</a></li>
-            <li><a href="/reset_game">Reset current table</a></li>
-          </ul>
-          <ul class="nav pull-right">
-            <li><a href="#" class="brand"><img src="/images/logo.png" alt="Tealeaf Blackjack"></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
+  <body>
   <div class="container">
     <%if @error %>
       <div class="alert alert-error"><%=@error%></div>
